k-labs/lab03/jump_tool_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jump1
  labels:
    app: jump1
spec:
  containers:
  - name: jump1
    image: stv707/multitool:v1
    ports:
    - containerPort: 80
    command: ["/bin/sh", "-ec", "while :; do echo '.'; sleep 5 ; done"]
