k-labs/lab03/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-vote
spec:
  ports:
  - port: 6379
  selector:
    app: backend-vote
