k-labs/lab03/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-vote
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: frontend-vote
