k-labs/lab03/kubia-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-api
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia
