k-labs/lab03/default_page_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: webappx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webappx-deployment
  labels:
    app: webappx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webappx
  template:
    metadata:
      labels:
        app: webappx
    spec:
      containers:
      - name: webappx
        image: stv707/appx:v7
        ports:
        - containerPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-http-backend
  annotations:
   #Comment the nginx class to use Azure http routing , uncomment addon-http-application-routing 
    kubernetes.io/ingress.class: "nginx"
   #kubernetes.io/ingress.class: addon-http-application-routing
spec: 
  defaultBackend:  
    service:
      name: default-http-backend
      port: 
        number: 80

# NO result
